--- a/tracker/.gitignore
+++ b/tracker/.gitignore
@@ -1,4 +1,4 @@
-enderContext.o
+renderContext.o
 ioMod.o
 parseXML.o
 gamedata.o
@@ -21,3 +21,5 @@ smartSprite.o
 light.o
 wall.o
 main.o
+levelManager.o
+run
