--- a/tracker/Makefile
+++ b/tracker/Makefile
@@ -3,7 +3,7 @@ CXX = g++
 # Warnings frequently signal eventual errors:
 CXXFLAGS=`sdl2-config --cflags` -g -W -Wall -std=c++11 -Weffc++ -Wextra -pedantic -O0 -I `sdl2-config --prefix`/include/
 
-LDFLAGS = `sdl2-config --libs` -lm -lexpat -lSDL2_ttf -lSDL2_image
+LDFLAGS = `sdl2-config --libs` -lm -lexpat -lSDL2_ttf -lSDL2_image -lSDL2_mixer
 
 OBJS = \
   renderContext.o \
@@ -36,6 +36,7 @@ OBJS = \
 	chunk.o \
 	hudElement.o \
 	hudManager.o \
+	sound.o \
 	main.o
 EXEC = run
 
